--- a/css/huangbaidu.css
+++ b/css/huangbaidu.css
@@ -18,6 +18,53 @@ a:hover{
 h3{
 	font-size:10px;
 }
+header{
+    width: 100%;
+    height: 4.8rem;
+    position: relative;
+}
+.huang-nav{
+	width: 100%;
+	height: 4.8rem;
+	min-width: : 30rem;
+	background-color: #0e0e0e;
+}
+.huang-logo-link {
+	width: 12.2rem;
+	height: 2.6rem;
+	margin-top: 8px;
+	margin-left: 20px;
+	background-color: #0e0e0e;
+	float: left;
+}
+.huang-logo-link img {
+	width: 100%;
+	height: 100%;
+}
+.huang-gengduo {
+	float: right;
+	width: 4rem;
+	height: 100%;
+	background-color: #0e0e0e;
+	box-sizing: border-box;
+	padding-top: 14px;
+}
+.huang-gengduo img {
+	width: 20px;
+	height: 20px;
+}
+.huang-geren {
+	float: right;
+	width: 4rem;
+	height: 100%;
+	background-color: #0e0e0e;
+	box-sizing: border-box;
+	padding-top: 14px;
+}
+.huang-geren img {
+	width: 20px;
+	height: 20px
+}
 .huang-container{
     align-content:center;
     justify-content:center;
@@ -54,7 +101,7 @@ h3{
 	flex-direction:column;
 	align-content:center;
 	justify-content:center;
-	text-intent:2rem;
+	
 }
 .huang-content-1 a{
 	
@@ -81,7 +128,7 @@ h3{
 	flex-direction:cloumn;
 	flex-wrap:wrap;
 	-webkit-flex-wrap:wrap;
-	margin-left:2rem;
+	
 	}
 .huang-content-2 li{
 	display:-webkit-flex;
@@ -89,6 +136,7 @@ h3{
 	flex-direction:column;
 	align-content:center;
 	justify-content:center;
+	
 }
 .huang-outer-3{
 	width:96%;
@@ -119,4 +167,29 @@ h3{
 	flex-direction:column;
 	align-content:center;
 	justify-content:center;
+}
+
+footer{
+    border: none;
+    position: relative;
+    z-index: 7;
+    width: 100%;
+    height: 8rem;
+    padding: 0;
+    background: #2d2d30;
+    color: #d6d6d6;
+}
+footer .huang-footer{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+.huang-footer p{
+    text-align: center;
+    line-height: 8rem;
+    margin: 0;
+    border: none;
+}
+.huang-footer a{
+    color: #d6d6d6;
 }
