--- a/css/zjl-reset.css
+++ b/css/zjl-reset.css
@@ -4,20 +4,29 @@
     font-weight: normal;
     font-style: normal;
     font-size:10px;
+    box-sizing: border-box;
 }
 html, body {
     width: 100%;
     min-width: 320px;
     height: 100%;
     background: #f5f5f5;
-    font-size:10px
+    font-size:10px;
+    
 }
 a{
     text-decoration: none;
     color: #000;
+    display: block;
 }
 li{
     list-style: none;
+}
+section{
+    padding: 0;
+    width: 100%;
+    margin-top: 20px;
+    box-sizing: border-box;
 }
 .left{
     float: left;
@@ -33,5 +42,10 @@ li{
 }
 .column{
     flex-direction: column;
+}
+figcaption p {
+    font-size: 13px;
+    line-height: 1.5;
+    text-align: justify;
 }
 
